correction on mobile

--- a/src/pages/App.module.scss
+++ b/src/pages/App.module.scss
@@ -50,7 +50,7 @@
     width: 23%;
   }
 
-  @media only screen and (max-width: 900px) {
+  @media screen and (min-width: 601px) and (max-width: 900px) {
     margin-bottom: 10px;
     width: 14%;
   }
@@ -79,7 +79,7 @@
   background-position: center;
   margin-bottom: 10px;
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 900px) {
     width: 80px;
     height: 45px;
   }
